# Lily-Agent

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  test.py
docs/adapters/: adapters.md
docs/agents/: agents.md
docs/formatter/: formatter.md
docs/tools/: tools.md
docs/vectorstore/: vector_store.md
examples/adapters/: groq_adapter.py
examples/formatters/: anthropic_formatter.py
examples/tools/: weather_tool.py
src/adapters/: adapter_classes.py  adapter_exceptions.py
src/adapters/integrations/: ollama_adapter.py
src/agents/: agent.py  agent_exceptions.py  tool_executor.py
src/formatters/: base_formatter.py  formatter.py
src/lily_agent/: __init__.py
src/lily_agent/adapters/: __init__.py  adapter.py
src/lily_agent/adapters/core/: __init__.py  adapter.py
src/lily_agent/adapters/integrations/: groq_adapter.py  (+1 more)
src/lily_agent/agents/: __init__.py  agent.py  tool_executor.py
src/lily_agent/embedder/: __init__.py  embedder.py
src/lily_agent/exceptions/: agent.py  embedder.py
src/lily_agent/formatters/: __init__.py  base_formatter.py  formatter.py
src/lily_agent/memory/: __init__.py  conversations.py  memory.py
src/lily_agent/policy/: agent_policy.py
src/lily_agent/registry/: __jnit__.py  agent_registry.py
src/lily_agent/schemas/: __init__.py  agent_policy.py
src/lily_agent/tools/: __init__.py  tool_exceptions.py
src/lily_agent/vectorstore/: __init__.py  vector_store.py
src/memory/: conversations.py
src/tool/: tool.py  tool_base.py
src/tool_builder/: tool_builder.py
src/tools/: tool.py  tool_base.py
(+25 files in other folders)
